server/manifests/vscode-example.yml
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: codeserver
  name: codeserver
  namespace: codeserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      containers:
      - image: gitpod/openvscode-server
        name: openvscode-server
        resources:
          requests:
            ephemeral-storage: "2Gi"
        volumeMounts:
        - name: ephemeral
          mountPath: "/home/workspace"
        ports:
          - containerPort: 3000
      volumes:
        - name: ephemeral
          emptyDir:
            sizeLimit: "4Gi"
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: codeserver-svc
  name: codeserver-svc
  namespace: codeserver
spec:
  ports:
  - name: 3000-3000
    port: 3001
    protocol: TCP
    targetPort: 3000
  selector:
    app: codeserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ingress
  namespace: codeserver
  annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.org/websocket-services: "codeserver-svc"
      nginx.ingress.kubernetes.io/server-snippets: |
        location / {
          proxy_pass http://rit.infra.site/;
          proxy_set_header Host $host;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection upgrade;
          proxy_set_header Accept-Encoding gzip;
        }
spec:
  ingressClassName: nginx
  rules:
  - host: rit.infra.site
    http:
      paths:
      - backend:
          service:
            name: codeserver-svc
            port:
              number: 3001
        path: /
        pathType: Prefix
